# atelier

./: .gitignore  ATELIER.md  CAPABILITIES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_QUALITY_METRICS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  STATUS.md  coding-harness-spec.md  pyproject.toml
.atelier/: README.md  providers.toml  settings.json
.atelier/agents/: atelier-spec-conformance.md  rust-reviewer.md
.atelier/docs/: host-harness-contract.md  memory-system.md
.atelier/hooks/: bounded-reads.sh  save-nudge.sh  session-start-memcheck.sh
.atelier/memory/: MEMORY.md  auto_adapter_not_configured.md  auto_auth_failure.md  auto_provider_unreachable.md  feedback_atelier_path_directive.md  feedback_config_scope.md  project_gui_dev_launch.md  project_no_silent_provider_fallback.md  project_subagent_hang_investigation.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: check.yml  nightly_phase_a_gate.yml  nightly_phase_b_gate.yml  nightly_protocol_overhead.yml  release.yml
assets/: build-icon.sh  glyph-to-path.swift
ci/nightly/: README.md
crates/atelier-cli/: Cargo.toml  README.md
crates/atelier-cli/src/: compaction.rs  compaction_blob.rs  expansion.rs  find.rs  instrumentation.rs  lib.rs  main.rs  memory_promote.rs  overhead.rs  runner.rs  subagent_spawner.rs
crates/atelier-cli/src/runner/: concurrent_edit.rs  turn.rs
crates/atelier-cli/tests/: exit_codes.rs  mcp_integration.rs  run_integration.rs  sigint_resume.rs
crates/atelier-cli/tests/common/: canonical.rs  mod.rs
crates/atelier-core/: Cargo.toml  README.md
crates/atelier-core/catalog/: mcp_servers.json
crates/atelier-core/skills/: README.md  audit.json  bug-report.json  changelog.json  ci-failure.json  commit.json  config-doctor.json  dependency-upgrade.json  diagram.json  document-sweep.json  document.json  explain.json  fix.json  issue-to-plan.json  migration.json  new-contributor.json  optimize.json  perf-investigate.json  plan.json  pr-polish.json  refactor.json  release-publish.json  release.json  review.json  scan.json  security-review.json  spec.json  sweep.json  test.json  triage.json
crates/atelier-core/src/: audit.rs  config.rs  context.rs  credentials.rs  diff.rs  dispatcher.rs  dod.rs  error.rs  file_watcher.rs  hooks.rs  init.rs  io_caps.rs  ledger.rs  lib.rs  mcp_config.rs  memory.rs  memory_index.rs  mental_model.rs  path_safety.rs  persistence.rs  plan.rs  protocol.rs  protocol_conformance.rs  protocol_strategy.rs  sandbox.rs  session.rs  skills.rs  staging.rs  state.rs  subagents.rs  subprocess.rs  text_safety.rs  time.rs  trust_boundary.rs  verify.rs
crates/atelier-core/src/adapter/: anthropic.rs  capability_matrix.rs  mod.rs  model_profile.rs  openai_compat.rs
crates/atelier-core/src/lsp/: approval.rs  install.rs  launcher.rs  mod.rs  receiver.rs  typescript.rs
crates/atelier-core/src/mcp/: errors.rs  http_launcher.rs  mcp_tool.rs  mod.rs  registration.rs  stdio_launcher.rs
crates/atelier-core/src/tools/: ast_grep.rs  builtin_wrapper.rs  edit_file.rs  grep.rs  list_dir.rs  mod.rs  read_file.rs  shell.rs  spawn_subagent.rs  write_file.rs
crates/atelier-core/subagents/: general-purpose.json  researcher.json  test-runner.json
crates/atelier-core/templates/: ATELIER.md
crates/atelier-core/tools/: ast_grep.v1.json  edit_file.v1.json  grep.v1.json  list_dir.v1.json  read_file.v1.json  shell.v1.json  spawn_subagent.v1.json  write_file.v1.json
crates/atelier-gui/: Cargo.toml  README.md  tauri.conf.json
crates/atelier-gui/capabilities/: default.json
crates/atelier-gui/icons/: icon.icns
crates/atelier-gui/src/: lib.rs  main.rs  provider.rs
crates/atelier-gui/ui/: index.html  package-lock.json  package.json  vite.config.ts
crates/atelier-gui/ui/src/: App.svelte  app.css
crates/atelier-gui/ui/src/lib/: state.ts
crates/atelier-gui/ui/src/lib/components/: Composer.svelte  ConcurrentEditModal.svelte  ContextPane.svelte  ConversationPane.svelte  DiffPane.svelte  EventLogPane.svelte  Header.svelte  InlineRenderers.svelte  MemoryPane.svelte  MentalModelPane.svelte  MetersPane.svelte  PlanPane.svelte  SubagentPane.svelte  SwapConsentModal.svelte
crates/atelier-tui/: Cargo.toml  README.md
crates/atelier-tui/src/: lib.rs  main.rs  skills_completion.rs
docs/: architecture.d2  blog-architecture.md  layout.md  toolchain.md  trust-boundary.md
examples/: README.md
examples/config/: dod.v1.json  permissions.v1.json  routing.v1.json  routing_multimodel.v1.json
examples/hooks/: log_pre_tool.v1.json
examples/skills/: bench.v1.json  explain.v1.json  standup.v1.json  triage.v1.json
examples/subagents/: code-reviewer.v1.json
examples/tools/: web_fetch.v1.json
experiments/lsp_spike/: Cargo.toml  README.md
experiments/lsp_spike/src/: main.rs
experiments/rmcp_spike/: Cargo.toml  README.md
experiments/rmcp_spike/src/: main.rs
packaging/homebrew/: atelier.rb.template
prompts/protocol_fewshot/: README.md  completion.md  minimal_edit.md  with_uncertainty.md
schemas/: README.md  versions.md
scripts/: collect_metrics.py  install.sh  npm_ioc_sweep.py
tasks/: audit-2026-06-02.md  audit-2026-06-04.md  deep_code_scan_v60.27.md  design_risks.md  lessons.md  phase_b_closeout.md  plan_audit_2026-06-02_fixes.md  plan_deep_scan_2026-05-20.md  plan_deep_scan_2026-06-04_fixes.md  plan_design_risks_critical_high.md  plan_high_severity_fixes.md  plan_low_severity_fixes.md  plan_medium_severity_fixes.md  plan_performance_track_v60.73.md  plan_provider_health_scan_fixes.md  plan_provider_health_ux.md  plan_r1b_turnstate_redesign.md  plan_section10_subagents.md  plan_section10_subagents_remaining.md  plan_skills_implementation.md  plan_usability_items_v60.70.md  plan_v60.36_critical.md  plan_v60.36_high.md  plan_v60.37_medium.md  plan_v60.38_low.md  shai_hulud_sweep_2026-05-19.md  todo.md
tests/: README.md  _schema_helpers.py  test_ci.py  test_npm_ioc_sweep.py  test_runner.py  test_schemas.py  test_validators.py  validate_artifacts.py  validate_schemas.py
(+152 files in other folders)
