[workspace]
resolver = "2"
members = [
    "crates/atelier-core",
    "crates/atelier-cli",
    "crates/atelier-gui",
    "crates/atelier-tui",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "TBD"
authors = []

# Shared dependency versions. Crates reference these via `name = { workspace = true }`
# so versions stay synced. Bump in one place.
[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
async-trait = "0.1"

# Serialization + schemas
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = "0.26"

# HTTP (remote LLM adapters + HTTP/SSE MCP servers)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# MCP (Model Context Protocol — §15 tool transport)
# Pinned to a recent rmcp; revisit during Phase A scaffold per the maturity-assessment note.
rmcp = "0.1"

# Secrets / credentials (§11 credential storage)
keyring = "3"

# Filesystem watcher (§14 concurrent-edit detection)
notify = "7"

# Error + logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tauri 2.x (GUI — §3)
tauri = { version = "2.2", features = [] }
tauri-build = { version = "2.2", features = [] }

# TUI (§3)
ratatui = "0.29"
crossterm = "0.28"

# LSP client (§7 Tier-1 hallucination detector)
tower-lsp = "0.20"

# Atomic diff application (§3) — temp directory for staged writes
tempfile = "3"

# Internal crate references
atelier-core = { path = "crates/atelier-core" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
