[workspace]
resolver = "2"
members = [
    "crates/atelier-core",
    "crates/atelier-cli",
    "crates/atelier-gui",
    "crates/atelier-tui",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/ChrisAdkin8/atelier"
authors = []

# Shared dependency versions. Crates reference these via `name = { workspace = true }`
# so versions stay synced. Bump in one place.
[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt", "compat"] }
futures = "0.3"
async-trait = "0.1"

# Serialization + schemas
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# v52 — `.atelier/config.toml` parser. We pull serde-aware
# deserialization in (`features = ["preserve_order"]` is not needed —
# the config is read-only and structurally small).
toml = { version = "0.8", features = ["parse"] }
jsonschema = "0.26"
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP (remote LLM adapters + HTTP/SSE MCP servers)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# MCP (Model Context Protocol — §15 tool transport).
# v60.10 (`experiments/rmcp_spike`): pinned to the 0.1.x line; 1.x on crates.io
# is a separate fork at the time of writing. Feature set: `client` enables the
# `serve_client` path + `Peer<RoleClient>` API; `transport-child-process` brings
# `TokioChildProcess` (stdio subprocess); `transport-sse` (v60.11 C1) brings
# `SseTransport` for `http`/`sse` MCP servers — under the hood reqwest + the
# `sse-stream` crate. rmcp 0.1.5 has no separate "HTTP-only" transport, so
# `Transport::Http` and `Transport::Sse` manifests both route through SSE.
# Default features stay on because rmcp 0.1.5 has a feature-gating bug where
# `macros` (which pulls `paste`) is required even when not using `#[tool]` —
# see the spike Cargo.toml comment.
rmcp = { version = "0.1", features = ["client", "transport-child-process", "transport-sse"] }

# Secrets / credentials (§11 credential storage)
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }

# Filesystem watcher (§14 concurrent-edit detection)
notify = "7"

# Error + logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tauri 2.x (GUI — §3)
tauri = { version = "2.2", features = [] }
tauri-build = { version = "2.2", features = [] }

# TUI (§3)
ratatui = "0.29"
crossterm = "0.28"

# LSP client (§7 Tier-1 hallucination detector — spike verdict: GO on async-lsp 0.2)
# Spike at experiments/lsp_spike/ validated: stdio transport, initialize handshake,
# textDocument/didOpen + publishDiagnostics, graceful shutdown. Features match the
# spike's Cargo.toml: client-monitor (crash detection) + tokio (async transport).
async-lsp = { version = "0.2", features = ["client-monitor", "tokio"] }
# lsp-types ships PublishDiagnosticsParams + Diagnostic + Position used by the receiver.
lsp-types = "0.95"
# tower is required by async-lsp's Service/Layer architecture.
tower = "0.5"

# Atomic diff application (§3) — temp directory for staged writes
tempfile = "3"

# Content-addressed hashing for §3 conflict detection (pre-edit hash check) and
# §14 checkpoint blobs.
sha2 = "0.10"

# §3 pre-commit syntax check — tree-sitter core; grammars are per-language deps.
tree-sitter = "0.25"
tree-sitter-json = "0.24"

# §3 line-based diff for incremental hunk events (Phase C data layer).
similar = "2.7"

# §15 built-in tools — `grep` content search (regex) and `list_dir` / `grep`
# directory walking. Both std-library-only would mean re-implementing
# regex + recursive walk; these crates are small and battle-tested.
regex = "1.11"
walkdir = "2.5"

# Non-poisoning locks for the §1 cost ledger. std::sync::RwLock poisons on
# panic-holding-the-write-guard, making every subsequent read panic and
# turning the ledger into a panic amplifier. `parking_lot` doesn't poison.
parking_lot = "0.12"

# `atelier run` integration tests — spawn the CLI binary and assert on
# stdout/stderr/exit-code. dev-only.
assert_cmd = "2"
predicates = "3"

# §1 Anthropic adapter — local HTTP stub for tests so SSE parsing, native
# tool-use, and error-mapping paths are covered without a live API key.
# dev-only.
wiremock = "0.6"

# §1 Anthropic adapter — SSE byte stream type from reqwest's `bytes_stream`.
bytes = "1"

# Session IDs (§14 — on-disk session lives at .atelier/sessions/<uuid>/)
uuid = { version = "1", features = ["v4", "serde"] }

# §11 subprocess hardening — direct `libc::kill(-pgid, SIGKILL)` so a timed-out
# child's process group (and any grandchildren `sh -c` spawned) is reaped, not
# just the direct child. Target-gated to Unix in the consuming crate.
libc = "0.2"

# Internal crate references
atelier-core = { path = "crates/atelier-core" }
# v47: atelier-cli now exposes a library (`atelier_cli::runner`) so the
# GUI shell can construct a SessionDispatcher + drive the turn loop
# without reimplementing the wiring.
atelier-cli = { path = "crates/atelier-cli" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
