[package]
name = "atelier-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Atelier command-line interface. Headless entry point — provides `atelier init` (spec §11) and will host `atelier login/logout/rotate/whoami` once §11 credentials land. No UI dependencies."

[features]
# v60.32 M06 — gate the test-only Runner builder seams
# (`with_adapter_for_test`, `with_starting_strategy_override`,
# `with_tier1_diagnostics_for_test`, `with_degradation_window`,
# `with_degradation_threshold`) so production consumers can't pin
# stale strategies through the public API. Off by default; tests
# enable it via `dev-dependencies` on the same crate.
test-seams = []

[[bin]]
name = "atelier"
path = "src/main.rs"

# v47: also expose the runner as a library so atelier-gui (and future
# atelier-tui driver mode) can build a SessionDispatcher + drive a
# turn loop without re-implementing the wiring. Binary still uses the
# same Runner via the local lib.
[lib]
name = "atelier_cli"
path = "src/lib.rs"

[dependencies]
atelier-core = { workspace = true }
# `atelier run` needs an async runtime + JSON serialisation for envelope/
# tool-call wiring. async-trait isn't needed at the CLI layer — only the
# adapter trait itself uses it internally.
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
# Sink::Capture is part of the runner's public API (driven by integration
# tests + future GUI/TUI wiring), so parking_lot belongs in regular deps,
# not dev-dependencies.
parking_lot = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
# v60 — `memory_promote::write_promoted_card` uses
# `NamedTempFile::persist` for atomic writes under
# `~/.atelier/memory/`. Promoted from dev-deps so the GUI / TUI
# drivers (which depend on atelier-cli) can both reach it.
tempfile = { workspace = true }
# v60.5 — `compaction_blob` serialises `CompactionBlob { items: Vec<ContextItem>, ... }`
# (serde) and mints `comp-<uuid>` blob ids (uuid).
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4"] }
# v60.29 H9 / H10 — `Runner` threads a CancellationToken into ToolContext
# and the CLI main races the run-future against ctrl_c + SIGTERM.
tokio-util = { workspace = true }
# §10 — `RunnerSpawner` implements `SubagentSpawner` (an async_trait).
async-trait = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
# Integration tests use `EventSink::Capture(Arc<parking_lot::Mutex<…>>)`
# to drain the broadcast bus without going through stdout.
parking_lot = { workspace = true }
# v60.9 — the `few_shot_override` integration test stands up a custom
# adapter impl that records the message history it receives. Needs
# `async-trait` to express the `async fn stream` method.
async-trait = { workspace = true }
# v60.32 M06 — enable the test-only Runner builder seams when the
# integration-test crate compiles. Production consumers (the `atelier`
# binary, GUI, TUI) build without this feature and therefore can't
# pin stale strategies through the public API.
atelier-cli = { path = ".", features = ["test-seams"] }
