[package]
name = "atelier-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Atelier coding harness core: agent loop, BYOM adapters, MCP client, session state, checkpoints, ledger. No UI dependencies. See spec §2.5."

[lib]
name = "atelier_core"
path = "src/lib.rs"

[dependencies]
# Only deps actually used by the current scaffold. Add more as the implementation lands.
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmcp = { workspace = true }
