[package]
name = "atelier-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Atelier coding harness core: agent loop, BYOM adapters, MCP client, session state, checkpoints, ledger. No UI dependencies. See spec §2.5."

[lib]
name = "atelier_core"
path = "src/lib.rs"

[dependencies]
# Only deps actually used by the current scaffold. Add more as the implementation lands.
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-json = { workspace = true }
similar = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util", "time"] }
wiremock = { workspace = true }
