[package]
name = "atelier-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Atelier coding harness core: agent loop, BYOM adapters, MCP client, session state, checkpoints, ledger. No UI dependencies. See spec §2.5."

[lib]
name = "atelier_core"
path = "src/lib.rs"

[dependencies]
# Only deps actually used by the current scaffold. Add more as the implementation lands.
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
# §15 — validate `.atelier/mcp_servers.json` against its JSON Schema at load.
jsonschema = { workspace = true }
rusqlite = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-json = { workspace = true }
similar = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
keyring = { workspace = true }
bytes = { workspace = true }
# §14 concurrent-edit detection — per-session filesystem watcher.
notify = { workspace = true }
# §7 Tier-1 LSP hallucination detector (U07 — receiver + launcher).
# Features match experiments/lsp_spike/: client-monitor + tokio.
async-lsp = { workspace = true }
lsp-types = { workspace = true }
tower = { workspace = true }

# §11 subprocess hardening: kill the timed-out child's process group, not just
# the immediate child. Unix-only — Windows isn't a v1 target.
[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util", "time"] }
wiremock = { workspace = true }
