[package]
name = "atelier-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Atelier Tauri 2.x shell. Consumes atelier-core over a broadcast channel. See spec §3."

[[bin]]
name = "atelier-gui"
path = "src/main.rs"

[lib]
name = "atelier_gui"
path = "src/lib.rs"
# The Rust shell is consumed by the binary in this crate only. cdylib would
# be added later when mobile targets land; not needed for desktop.
crate-type = ["lib"]

[dependencies]
atelier-core = { workspace = true }
# v47: GUI drives a turn loop via the atelier-cli library. Pulls in
# Runner, ProviderChoice, MockResponse, EventSink, DispatcherHandle.
atelier-cli = { workspace = true }
tauri = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Bridge for `Event::StagingPendingApproval { commit_id: Uuid }` /
# `CommitDecision { commit_id: Uuid }` — projected onto JSON strings
# for the webview.
uuid = { workspace = true }
# v57 (M-sec-2) — atomic promote-memory-card disk writes via
# NamedTempFile::persist so a crash mid-write can't leave a partial
# file under ~/.atelier/memory/.
tempfile = { workspace = true }

[build-dependencies]
tauri-build = { workspace = true }
