[package]
name = "atelier-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Atelier terminal UI (ratatui + crossterm). Consumes atelier-core over a broadcast channel. See spec §3 (TUI subset)."

[[bin]]
name = "atelier-tui"
path = "src/main.rs"

[lib]
name = "atelier_tui"
path = "src/lib.rs"

[dependencies]
atelier-core = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
