[package]
name = "atelier-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Atelier terminal UI (ratatui + crossterm). Consumes atelier-core over a broadcast channel. See spec §3 (TUI subset)."

[[bin]]
name = "atelier-tui"
path = "src/main.rs"

[lib]
name = "atelier_tui"
path = "src/lib.rs"

[dependencies]
atelier-core = { workspace = true }
# v48: TUI is now a driver. Same library hop the GUI uses to build a
# Runner + grab a DispatcherHandle for the y/n approval keys.
atelier-cli = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Pending-approval correlation id (PendingApproval.commit_id mirrors
# the bus event's `commit_id: Uuid`). Same workspace dep atelier-core
# uses; we only need the type for storage + display.
uuid = { workspace = true }
# v48 driver-mode demo: build the scripted MockAdapter responses,
# including the harness_meta envelope. Same workspace dep the GUI uses
# for `bridge_event` payload construction.
serde_json = { workspace = true }
