# Empty `[workspace]` table keeps the spike out of the main atelier workspace —
# same pattern as `experiments/rmcp_spike/`. The spike pulls a different
# `async-lsp` feature set than `atelier-core` will end up wiring (the spike
# enables `tokio` transport + the `client-monitor` future; atelier-core's
# foundation only needs the bare client) and we don't want cargo to amalgamate
# them while the verdict is still pending.
[workspace]

[package]
name = "lsp-spike"
version = "0.0.0"
edition = "2021"
description = "Phase B Track C1 prerequisite: maturity assessment for the async-lsp crate as atelier-core's LSP client. Mirror of experiments/rmcp_spike/. See README.md."
publish = false

[dependencies]
# Pin a recent async-lsp at spike time; update the README's matrix with the
# actual version tested. 0.2.x is the canonical async LSP client/server
# library; the 0.1.x line is unmaintained.
async-lsp = { version = "0.2", features = ["client-monitor", "tokio"] }
# lsp-types ships the typed LSP message shapes. async-lsp re-exports a subset
# but the spike needs PublishDiagnosticsParams + Diagnostic + Position directly.
lsp-types = "0.95"

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tower = "0.5"
futures = "0.3"

[[bin]]
name = "lsp-spike"
path = "src/main.rs"
